--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </label>
         </p>
         <p>
-            <video src="https://bac809b9-41e8-477a-9209-697269632abb.ws-eu01.gitpod.io/files/download/?id=38e2c6c9-11d6-4792-ae29-73c74d9e3fc7" controls></video>
+            <video src="SAVE.mp4" controls></video>
         </p>
      <main>
   <footer>
